--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -41,9 +41,10 @@ main.container-fluid {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    width: 700px;
+    width: 450px;
     margin: 0 auto;
-    padding: 30px;
+    margin-bottom: 50px;
+    padding: 30px 80px;
     background-color: var(--lighterblue);
     border-radius: 6px;
 }
@@ -54,12 +55,16 @@ label {
     margin-right: 15px;
 }
 
-input {
+input, textarea {
     border: 1px solid var(--darkerblue);
     border-radius: 3px;
+    padding: 2px 6px;
+    width: 100%;
 }
 
-
+input:focus, textarea:focus {
+    border: 2px solid var(--firstblue);
+}
 
 
 
