--- a/main_app/templates/registration/login.html
+++ b/main_app/templates/registration/login.html
@@ -3,7 +3,7 @@
 <h1>Log In</h1>
 <div class="jumbotron" id="login-container">
 
-    <form method="post" action="{% url 'login' %}">
+    <form method="post" action="{% url 'login' %}" class="form-style">
 
     {% csrf_token %}
     <div class="form-group">
