--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -7,22 +7,22 @@
 
 <form method="post" action="{% url 'signup' %}" class="form-style">
     {% csrf_token %}
-        <div class="col-md-2 mb-3">
+        <div>
             <label for="first_name">First Name:</label>
             <input type="text" name="first_name" required>
         </div>
-        <div class="col-md-2 mb-3">
+        <div>
             <label for="last_name">Last Name:</label>
             <input type="text" name="last_name" required>
         </div>
-        <div class="col-md-4 mb-3">
+        <div>
             <label for="email">Email:</label>
             <input type="email" name="email" required>
         </div>
 
 
 
-        <div class="col-md-8 mb-3">
+        <div>
             {% for field in form %} 
                 {{field.label_tag}}    {{field}}
                 {{ field.help_text }}
