--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -134,15 +134,28 @@ nav {
 
 
 /* Home page */
-#home-portfolio-links {
-    border: 1px solid blue
+.home-portfolio-links {
+    padding: 20px;
+    margin: 15px;
+    min-width: 200px;
+    max-width: 400px;
+}
+
+
+.profile-img-home {
+    width:140px;
+    height: 140px;
+    object-fit: cover;
+}
+
+.profile-info {
+    padding-left: 15px;
 }
 
 #login-container {
     display: flex;
     justify-content: center;
 }
-
 
 .carousel-inner {
     background-color: white;
@@ -186,6 +199,10 @@ nav {
 
 #profile-img {
     width: 100%;
+}
+
+.profile-icon {
+    font-size: 4em;
 }
 
 #project-img {
