--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -3,29 +3,6 @@
 
 <h1>Welcome to Briefcase: a place to view and share eachother's portfolios</h1>
 
-
-
-<div class=jumbotron>
-    <h1>Portfolio Links</h1>
-    
-    {% if user != "" %}
-    <div class="row">
-        {% for user in users %}
-        {% if user.portfolio != "" %}
-        <div class="col-md-4 mb-3 home-portfolio-links">
-            <h3>{{user.first_name}} {{user.last_name}}</h3>
-            <p>{{user.portfolio.profession}}</p>
-            <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View Portfolio</button></a>
-        </div>
-        {% endif %}
-        {% endfor %}
-    </div>
-    {% else %}
-        <h2>There are no users with portfolios</h2>
-    {% endif %}
-
-</div>
-
 <div class="container">
     <div class="row" id="carousel-row">
         <div class="col-2"></div>
@@ -78,15 +55,21 @@
 
 <div class=jumbotron>
     <h1>Portfolio Links</h1>
-    
     {% if user %}
-    <div class="row">
+    <div class="row d-flex justify-content-around">
         {% for user in users %}
         {% if user.portfolio %}
-        <div class="col-md-4 mb-3 home-portfolio-links">
-            <h3>{{user.first_name}} {{user.last_name}}</h3>
-            <p>{{user.portfolio.profession}}</p>
-            <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View Portfolio</button></a>
+        <div class="col-sm-6 col-md-6 col-lg-4 card home-portfolio-links d-flex flex-row">
+            {% if user.portfolio.photo_url %}
+                <img class="responsive-img mb-4 profile-img-home" src="{{user.portfolio.photo_url}}" alt="Avatar">
+            {% else %}
+                <div class="responsive-img mb-4 profile-img-home profile-icon text-center"><i class="fas fa-user"></i></div>
+            {% endif %}
+            <div class="profile-info">
+                <h3>{{user.first_name}} {{user.last_name}}</h3>
+                <p>{{user.portfolio.profession}}</p>
+                <a href="{% url 'user_profile' user.id %}"><button type="button" class="btn btn-outline-primary">View Portfolio</button></a>
+            </div>
         </div>
         {% endif %}
         {% endfor %}
@@ -94,7 +77,6 @@
     {% else %}
         <h2>There are no users with portfolios</h2>
     {% endif %}
-
 </div>
 
 {% endblock %}
