--- a/main_app/templates/main_app/project_form.html
+++ b/main_app/templates/main_app/project_form.html
@@ -11,9 +11,14 @@
     <div id="project-form-box">
         <form action="" method="post" class="form-style">
             {% csrf_token %}
-            <table>
-                {{ form.as_table }}
-            </table>
+            {% for field in form %}
+            <div class="form-group">
+            {{ field.label_tag }} {{ field }}
+            <br>
+            {{ field.help_text }}
+            {{ field.errors }}
+    </div>
+    {% endfor %}
             <input type="submit" value="Submit">
         </form>
     </div>
